--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "node test.js",
-    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Hanna Tkachenko <anna.kuvakina91@gmail.com>",
